# syntk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml  ruff.yml  template-init.yml
examples/: column_rate_difficulty.yaml  column_rate_difficulty2.yaml  column_with_tracking.yaml  definitions.yaml  definitions_gptoss.yaml  lmfill_example.yaml
src/python_template/: cli.py
src/syntk/: __init__.py  api.py  api_client.py  argument_parser.py  arguments.py  cli.py  config.py  data_io.py  io.py  lmfill.py  tracking.py  utils.py
src/syntk/pipelines/: __init__.py  base.py  bootstrap.py  column.py
tests/: test_api_client.py  test_apply_limit.py  test_argument_parser.py  test_base_pipeline.py  test_bootstrap.py  test_cli.py  test_column_config_params.py  test_column_dataclasses.py  test_column_pipeline.py  test_config.py  test_config_and_io.py  test_e2e_column_pipeline.py  test_get_chat_response.py  test_hf_integration.py  test_io.py  test_pipeline_init_client.py  test_pipeline_load_data.py  test_pipeline_metrics.py  test_pipeline_save.py  test_pipelines_column.py  test_process_row.py  test_process_rows.py  test_tracking.py  test_tracking_summary.py  test_utils.py  test_yaml_config.py
