[project]
name = "syntk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
syntk = "syntk:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
