[project]
name = "syntk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pyyaml>=6.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "typer>=0.20.0",
]

[project.scripts]
syntk = "syntk:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
