[project]
name = "syntk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "pyarrow>=4.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "typer>=0.20.0",
]

[project.scripts]
syntk = "syntk:cli.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
tensorboard = ["torch>=2.0.0", "tensorboard>=2.11.0"]
mlflow = ["mlflow>=2.0.0"]
wandb = ["wandb>=0.15.0"]
aim = ["aim>=3.17.0"]
tracking = ["torch>=2.0.0", "tensorboard>=2.11.0", "mlflow>=2.0.0", "wandb>=0.15.0", "aim>=3.17.0"]

[dependency-groups]
dev = [
    "ipython",
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
